# foobar2000-sdk-cmake

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: cmake.yml
foobar2000/: CMakeLists.txt
foobar2000/SDK/: CMakeLists.txt
foobar2000/foobar2000_component_client/: CMakeLists.txt
foobar2000/helpers/: CMakeLists.txt
libPPUI/: CMakeLists.txt
pfc/: CMakeLists.txt
wtl/: CMakeLists.txt
